GNOME Bugzilla – Bug 646317
Invalid exit status
Last modified: 2011-09-08 09:30:56 UTC
When using the factory, gnome-terminal initializes the exit_code as -1 and doesn't change that status when quitting the main factory process. This can be observed as following: Start a different terminal, like xterm Start gnome-terminal exit from shell with CTRL+D echo $? from xterm $? will show 255, which seems to be the -1 that data->exit_code was initialized with. When I change the line that initializes the struct to be something else, that will become the exit status here. I think exit_code should be initialized as EXIT_SUCCESS in src/terminal.c. This causes bugs like these: https://bugs.archlinux.org/task/21421
Created attachment 184769 [details] [review] Patch to fix the issue
Looks fine to me. Ok to commit after code freeze ends (once g-t 3.0.0 is tagged), to master and gnome-3-0 branch.
3.0.1 is near. don't forget to push this fix
thanks a lot of missing this one line patch.
Looks like this wasn't committed for 3.0.1 - I'm still seeing it and the fix isn't listed in the changelog. Thanks, Ross
Comment on attachment 184769 [details] [review] Patch to fix the issue Changing patch status as per comment 2.
The commit message is badly formatted; I've fixed it and pushed to master: commit a7c6cd3823db3e0b93cfb1fb000edff3260a6858 Author: Jan de Groot <jan@jgc.homeip.net> Date: Thu Aug 25 13:19:47 2011 -0400 Fix exit status of factory processes The exit status should default to EXIT_SUCCESS instead of -1. When things go wrong, the exit status is set to something else anyways. https://bugzilla.gnome.org/show_bug.cgi?id=646317