Fix exit status of factory processes

The exit status should default to EXIT_SUCCESS instead of -1. When
things go wrong, the exit status is set to something else
anyways.

https://bugzilla.gnome.org/show_bug.cgi?id=646317